--- a/autoAsinGrabber/popup.html
+++ b/autoAsinGrabber/popup.html
@@ -18,7 +18,7 @@
         </div>
         <div class="col-10 col-md-10 ">
           <div class="m-2">
-            <p>Auto ASIN Grabber</p>
+            <p>Triplemars Explorer</p>
           </div>
         </div>
 
@@ -41,7 +41,7 @@
       </button>
       <div data-bind = "visible: myValues().length > 0">
       <button class="custom-btn-CopyToClipboard" id="custom-btn-CopyToClipboard">
-        <span>Copy to Clipboard</span>
+        <span>Copy</span>
       </button>
       <button class="custom-btn-ExportToCSV mr-1" id="custom-btn-ExportToCSV">
         <span>Export to CSV</span>
