--- a/autoAsinGrabber/popup.html
+++ b/autoAsinGrabber/popup.html
@@ -33,7 +33,7 @@
     <div class="card-footer text-muted">
       <h6 id="noOfEntries"></h6>
       <button class="custom-btn-GetherIds mr-1 mb-1" id="custom-btn-GetherIds">
-        <span>Gether Ids</span><span type="space-ship" size="20"
+        <span>Get Ids</span><span type="space-ship" size="20"
                                      class="css-3jmnh0-IconSvg e17d1iu71 custom-icon2"
                                      style="margin-left: 7px;"></span>
       </button>
