--- a/autoAsinGrabber/popup.html
+++ b/autoAsinGrabber/popup.html
@@ -1,61 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <div class="card">
+<div class="card">
     <div class="card-header">
 
-      <div class="row">
-        <div class="col-2 col-md-2">
-          <div>
-            </span><span type="space-ship" size="20"
-                         class="css-3jmnh0-IconSvg e17d1iu71 custom-icon-header"
-                         style="margin-right: 7px;"></span>
-          </div>
-        </div>
-        <div class="col-10 col-md-10 ">
-          <div class="m-2">
-            <p>Triplemars Explorer</p>
-          </div>
-        </div>
+        <div class="row">
+            <div class="col-2 col-md-2">
+                <div>
+                    </span><span type="space-ship" size="20"
+                                 class="css-3jmnh0-IconSvg e17d1iu71 custom-icon-header"
+                                 style="margin-right: 7px;"></span>
+                </div>
+            </div>
+            <div class="col-10 col-md-10 ">
+                <div class="m-2">
+                    <p>Triplemars Explorer</p>
+                </div>
+            </div>
 
-      </div>
+        </div>
     </div>
     <div class="card-body">
-      <div class="ant-collapse" id="list-container">
-      </div>
+        <div class="container mt-1">
+            <div class="card align-items-center justify-content-center">
+                <p class="showIf text-justify" id="showIf"> No elements at this moment! </p>
+            </div>
+        </div>
+        <div class="ant-collapse" id="list-container">
+        </div>
 
     </div>
     <div class="card-footer text-muted">
-      <h6 id="noOfEntries"></h6>
-      <button class="custom-btn-GetherIds mr-1 mb-1" id="custom-btn-GetherIds">
-        <span>Get Ids</span><span type="space-ship" size="20"
-                                     class="css-3jmnh0-IconSvg e17d1iu71 custom-icon2"
-                                     style="margin-left: 7px;"></span>
-      </button>
-      <button class="custom-btn-PasteInTriplemars mb-1 mr-1" id="custom-btn-PasteInTriplemars">
-        <span>Paste In Triplemars</span><span type="space-ship" size="20"
-                                              class="css-3jmnh0-IconSvg e17d1iu71 custom-icon"
-                                              style="margin-left: 7px;"></span>
-      </button>
-      <div data-bind = "visible: myValues().length > 0">
-      <button class="custom-btn-CopyToClipboard" id="custom-btn-CopyToClipboard">
-        <span>Copy</span>
-      </button>
-      <button class="custom-btn-ExportToCSV mr-1" id="custom-btn-ExportToCSV">
-        <span>Export to CSV</span>
-      </button>
-      <button class="custom-btn-Clear" id="custom-btn-Clear">
-        <span>Clear</span>
-      </button>
-      </div>
+        <h6 id="noOfEntries"></h6>
+        <button class="custom-btn-GetherIds mr-1 mb-1" id="custom-btn-GetherIds">
+            <span>Get Ids</span><span type="space-ship" size="20"
+                                      class="css-3jmnh0-IconSvg e17d1iu71 custom-icon2"
+                                      style="margin-left: 7px;"></span>
+        </button>
+        <button class="custom-btn-PasteInTriplemars mb-1 mr-1" id="custom-btn-PasteInTriplemars">
+            <span>Paste In Triplemars</span><span type="space-ship" size="20"
+                                                  class="css-3jmnh0-IconSvg e17d1iu71 custom-icon"
+                                                  style="margin-left: 7px;"></span>
+        </button>
+        <div data-bind="visible: myValues().length > 0">
+            <button class="custom-btn-CopyToClipboard" id="custom-btn-CopyToClipboard">
+                <span>Copy</span>
+            </button>
+            <button class="custom-btn-ExportToCSV mr-1" id="custom-btn-ExportToCSV">
+                <span>Export to CSV</span>
+            </button>
+            <button class="custom-btn-Clear" id="custom-btn-Clear">
+                <span>Clear</span>
+            </button>
+        </div>
     </div>
-  </div>
+</div>
 
-  <script src="popup.js"></script>
+<script src="popup.js"></script>
 </body>
 </html>
