--- a/autoAsinGrabber/popup.html
+++ b/autoAsinGrabber/popup.html
@@ -37,30 +37,37 @@
     </div>
     <div class="card-footer text-muted">
         <h6 id="noOfEntries"></h6>
-        <button class="custom-btn-GetherIds mr-1 mb-1" id="custom-btn-GetherIds">
-            <span>Get Ids</span><span type="space-ship" size="20"
-                                      class="css-3jmnh0-IconSvg e17d1iu71 custom-icon2"
-                                      style="margin-left: 7px;"></span>
-        </button>
-        <button class="custom-btn-PasteInTriplemars mb-1 mr-1" id="custom-btn-PasteInTriplemars">
-            <span>Paste In Triplemars</span><span type="space-ship" size="20"
-                                                  class="css-3jmnh0-IconSvg e17d1iu71 custom-icon"
-                                                  style="margin-left: 7px;"></span>
-        </button>
-        <div data-bind="visible: myValues().length > 0">
-            <button class="custom-btn-CopyToClipboard" id="custom-btn-CopyToClipboard">
-                <span>Copy</span>
+      <p id="getIdsPopup" style="display: none">Click here or Press Alt+1</p>
+      <p id="PasteInTripleMarsPopup" style="display: none">Click here or Press Alt+2</p>
+        <div class="row align-items-center justify-content-center ">
+            <button class="custom-btn-GetherIds mr-1 mb-5" id="custom-btn-GetherIds">
+                <span>Get Ids</span><span type="space-ship" size="20"
+                                          class="css-3jmnh0-IconSvg e17d1iu71 custom-icon2"
+                                          style="margin-left: 7px;"></span>
             </button>
-            <button class="custom-btn-ExportToCSV mr-1" id="custom-btn-ExportToCSV">
-                <span>Export to CSV</span>
+
+
+            <button class="custom-btn-PasteInTriplemars mb-5 mr-1" id="custom-btn-PasteInTriplemars">
+                <span>Paste In Triplemars</span><span type="space-ship" size="20"
+                                                      class="css-3jmnh0-IconSvg e17d1iu71 custom-icon"
+                                                      style="margin-left: 7px;"></span>
             </button>
-            <button class="custom-btn-Clear" id="custom-btn-Clear">
-                <span>Clear</span>
-            </button>
+        </div>
+        <div class="row align-items-center justify-content-center">
+            <div data-bind="visible: myValues().length > 0">
+                <button class="custom-btn-CopyToClipboard" id="custom-btn-CopyToClipboard">
+                    <span>Copy</span>
+                </button>
+                <button class="custom-btn-ExportToCSV mr-1" id="custom-btn-ExportToCSV">
+                    <span>Export to CSV</span>
+                </button>
+                <button class="custom-btn-Clear" id="custom-btn-Clear">
+                    <span>Clear</span>
+                </button>
+            </div>
         </div>
     </div>
 </div>
-
 <script src="popup.js"></script>
 </body>
 </html>
